css/index.css
nav li:nth-child(1) { font-weight: 600; }

			/* -- Banner Image -- */
#home {
	overflow: hidden;
	text-align: center;
/*	min-height: 340px;*/
	max-height: 380px;
	
	/*	Flex-cont: column and item align-center*/
	display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: column;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;

    flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
	-webkit-box-lines: single;
	-moz-box-lines: single;

    justify-content: flex-start;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;

    align-content: stretch;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;

    align-items: center;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
}
#front-text-cont {
	text-align: left;
	position: absolute;
	width: 100%;
	top: 12%;
}
#banner-3dc {
	display: block;
	width: 100%;
	max-height: 490px;
}
@media screen and (max-width: 980px) {
	#home {	height: 340px; }
	#banner-3dc {
		width: 980px;
		height: 340px;
	}
}

@media screen and (min-width: 1250px) {
	.section, footer, #home, #collapsable-menu {
		max-width: 1250px;
		margin: 0 auto;
	}
	.banner-cont { background: white; }
	#front-text-cont {
		position: relative;
		top: -300px;
	}
}

#home h1 {
	color: white;
	margin: 0;
}
#home a {
	color: white;
}
#home a:visited {
	color: white;
}
#home p {
	color: white;
	margin: 0;
	font-size: 17px;
	padding: 0px 0px 5px 40px;
	letter-spacing: 0.7px;
}

				/* -- Main-page Introduction and Links -- */

@media screen and (max-width: 910px) {
	#index-content { padding-top: 0px; }
	h2 { text-align: center; }
}

#index-content .section-rightpanel div {
	max-width: inherit;
}

#index-content .section-rightpanel div {
	max-width: inherit;
}

#index-content .section-rightpanel div div div p {
	max-width: inherit;
}

#index-introduction {	
	max-width: 850px;
	/*Flex-cont: defaults */
	display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: row;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;

    flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
	-webkit-box-lines: single;
	-moz-box-lines: single;

    justify-content: flex-start;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;

    align-content: stretch;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;

    align-items: flex-start;
    -webkit-box-align: start;
    -moz-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
}

.index-para {
	margin-bottom: 15px;
	
	/*Flex-cont: column */
	display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: column;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;

    flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
	-webkit-box-lines: single;
	-moz-box-lines: single;

    justify-content: flex-start;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;

    align-content: stretch;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;

    align-items: flex-start;
    -webkit-box-align: start;
    -moz-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
}

.index-para a {
	width: 200px;
	text-align: center;
	padding: 5px;
	background: lightgrey;
	text-decoration: underline;
	
	/*Flex-item: self align-flex-end */
	flex: 0 1 auto;
    -webkit-box-flex: 0;
    -moz-box-flex: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
	
	align-self: flex-end;
    -webkit-align-self: flex-end;
    -ms-flex-item-align: flex-end;
	
	order: 0;
	-webkit-box-ordinal-group: 1;
    -moz-box-ordinal-group: 1;
    -webkit-order: 0;
    -ms-flex-order: 0;
}

.index-para a:hover {
	background: darkgrey;
	text-decoration: none;
}

#burbo-cont {
	margin-left: 50px;
	width: 400px;
	
	/*Flex-cont: item align-center*/
    display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: row;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;

    flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
	-webkit-box-lines: single;
	-moz-box-lines: single;

    justify-content: flex-start;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;

    align-content: stretch;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;

    align-items: center;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
}

@media screen and (max-width: 600px) {
	#burbo-cont { width: 85%; }
}

#burbo-cont img { width: inherit; }

@media screen and (max-width: 1250px) {
	
	/* CSS for IE10+ */
	@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
		#burbo-cont { display: none; }
	}
	
	/*	CSS for all other browsers */
	#burbo-cont {
/*		max-width: 400px;*/
		margin: 10px 0px;
		
		/*Flex-item: self align-center*/
		
		flex: 0 1 auto;
		-webkit-box-flex: 0;
		-moz-box-flex: 0;
		-webkit-flex: 0 1 auto;
		-ms-flex: 0 1 auto;

		align-self: center;
		-webkit-align-self: center;
		-ms-flex-item-align: center;
		
		justify-content: center;
		-webkit-box-pack: center;
		-moz-box-pack: center;
		-webkit-justify-content: center;
		-ms-flex-pack: center;

		order: 0;
		-webkit-box-ordinal-group: 1;
		-moz-box-ordinal-group: 1;
		-webkit-order: 0;
		-ms-flex-order: 0;
	}
	#index-introduction {
		max-width: 600px;
		
		flex-direction: column;
		-webkit-box-direction: normal;
		-moz-box-direction: normal;
		-webkit-box-orient: vertical;
		-moz-box-orient: vertical;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
	}
}

/* Slideshow section */

#slideshow { padding-top: 30px; }

.slideshow-cont {
	margin: auto;
	border-style: groove;
	width: 90%;
}

.target-slide-cont {
/*	width: 100%;*/
	margin-top: 15px;
	overflow: hidden;
	
	/*Flex-cont: item align-center*/
    display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: row;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;

    flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
	-webkit-box-lines: single;
	-moz-box-lines: single;

    justify-content: center;
    -webkit-box-pack: center;
    -moz-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;

    align-content: stretch;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
	
	align-items: flex-start;
    -webkit-box-align: start;
    -moz-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
}

.slides {
	height: 100%;
	display: none;
	max-height: 430px;
}

.slides:first-of-type{
	display: block;
}

#navigation-border {
	width: 100%;
	padding: 1.5px;
}

.slideshow-navigation {
	height: 40px;
	overflow-x: hidden;
	overflow-y: hidden;
	-ms-overflow-y: hidden;
	margin-bottom: 10px;
	margin-top: 10px;
	
	/*Flex-cont: item align-center, justify-content center	*/
	display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: row;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;

    flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
	-webkit-box-lines: single;
	-moz-box-lines: single;

    justify-content: center;
    -webkit-box-pack: center;
    -moz-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;

    align-content: center;
    -webkit-align-content: center;
    -ms-flex-line-pack: center;

    align-items: flex-start;
    -webkit-box-align: start;
    -moz-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
}

.slideshow-thumbnails {
	height: inherit;
	opacity: 0.6;
	margin: 0px 2px;
	cursor: pointer;
	border: 1px solid black;
}

.slideshow-thumbnails img { height: inherit; }

/* Initialise first image */
.slides:first-of-type { display: block; }
.slideshow-thumbnails:first-of-type {opacity: 1;}

@media screen and (max-width: 910px) {
	.section:nth-child(even):not(footer) { border-top: 1px solid black; }
	.slideshow-navigation { height: 50px; }
	.slides { max-height: 400px; }
}

				/* -- News & Pubs -- */

#news-section {
	flex-direction: column;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
	
	align-items: center;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
}

#news-section h2 {
	margin-bottom: 0px;
	text-align: center;
}

#news {
	margin-top: 20px;
	width: 90%;
	border: 1px solid black;
	overflow-x: scroll;
	white-space: nowrap;
	background: white;
	padding: 10px;
	box-shadow:         inset 0 0 7px #000000;
	-moz-box-shadow:    inset 0 0 7px #000000;
	-webkit-box-shadow: inset 0 0 7px #000000;
}

#news-table {
	table-layout: fixed;
	border-spacing: 25px 0px;
	width: 100%;
	cursor: move;
}

#news-table td, th {
	white-space: normal;
	width: 245px;
}
#news {	-webkit-overflow-scrolling: touch;
	  -webkit-scroll-snap-points-x: repeat(275px);
	  	  -ms-scroll-snap-points-x: repeat(275px);
		 	  scroll-snap-points-x: repeat(275px);
	      -webkit-scroll-snap-type: mandatory;
		      -ms-scroll-snap-type: mandatory;
			      scroll-snap-type: mandatory; }

#news-table th {
	height: 30%;
	line-height: 1.5;
	background-color: rgb(230,230,230);
	border-top: 1px solid black;
	border-left: 1px solid black;
	border-right: 1px solid black;
}

#news-table th span {
	font-style: italic;
	font-weight: 345;
}

#news-table td {
	vertical-align: top;
	padding: 10px 10px 25px 10px;
	background-color: white;
	border-bottom: 1px solid black;
	border-left: 1px solid black;
	border-right: 1px solid black;
}

@media screen and (max-width: 910px) {
	#news-section div:first-of-type {
		width: 100%;
	}
}

